Amélioration de la qualité des images

--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
           <div class="offres">
             <a href="#">
               <img
-                src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                 alt="Photo hôtel de la mer"
+                width="250px"
+                height="180px"
               />
               <h3>Hôtel de la mer</h3>
               <p>Nuit à partir de <strong>46€</strong></p>
@@ -303,7 +305,7 @@
           <div class="Vieux_port">
             <a href="#">
               <img
-                src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                src="images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="Photo du vieux port"
               />
               <h3>Vieux port</h3>
@@ -313,17 +315,17 @@
           <div class="Pommègues">
             <a href="#">
               <img
-                src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash-mini.jpg"
                 alt="Photo du fort de Pommègues"
               />
-              <h3>Fort de pommegues</h3>
+              <h3>Fort de pommègues</h3>
             </a>
           </div>
 
           <div class="Frioul">
             <a href="#">
               <img
-                src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash-mini.jpg"
                 alt="Photo de l'île de Frioul"
               />
               <h3>Îles du Frioul</h3>
@@ -333,7 +335,7 @@
           <div class="Calanques">
             <a href="#">
               <img
-                src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                 alt="Photo des Calanques"
               />
               <h3>Parc National des Calanques</h3>
